[package]
name = "clitool"
version = "0.2.0"
description = "Helpers for creating CLIs with serializable JSON output."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-idl"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["clap", "json", "cli"]

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.56"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
