[package]
name = "errmapgen"
version = "0.4.0"
description = "Move JSON error map generator."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-idl"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem"]

[features]
default = []
address20 = [
    "errmap/address20",
    "move-core-types/address20",
    "static-address/address20"
]
address32 = [
    "errmap/address32",
    "move-core-types/address32",
    "static-address/address32"
]

[dependencies]
anyhow = "1.0.42"
docstring = { version = "0.2.2", path = "../docstring" }
errmap = "0.2.0"
move-core-types = { version = "0.2.1", package = "mv-core-types" }
move-model = { version = "0.2.1", package = "mv-model" }
serde = { version = "1.0", features = ["derive"] }
static-address = "0.2"
