[package]
name = "move-idl-parse"
version = "0.4.0"
description = "CLI for parsing an IDL from a Move package."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-idl"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem", "token"]

[features]
default = []
address20 = ["move-idl/address20"]
address32 = ["move-idl/address32"]

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.56"
clap = { version = "3.2", features = ["derive"] }
clitool = { version = "0.2.0", path = "../clitool" }
move-idl = { version = "0.4.0", path = "../move-idl" }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }

[[bin]]
name = "move-idl-parse"
path = "./src/bin/move-idl-parse.rs"
