[package]
name = "move-idl-schema"
version = "0.3.0"
description = "Rust types for the Move IDL specification."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-idl"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem", "token"]

[features]
default = []
address20 = ["move-idl/address20"]
address32 = ["move-idl/address32"]

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
move-idl = { version = "0.3.0", path = "../move-idl" }
