[package]
name = "move-idl"
version = "0.4.2"
description = "Move IDL"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-idl"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem", "token"]
readme = "../../README.md"

[lib]
name = "move_idl"
path = "src/lib.rs"

[features]
default = []
address20 = [
    "errmapgen/address20",
    "move-core-types/address20",
    "move-idl-types/address20",
    "struct-tag/address20",
]
address32 = [
    "errmapgen/address32",
    "move-core-types/address32",
    "move-idl-types/address32",
    "struct-tag/address32",
]

[dependencies]
anyhow = "1.0.42"
docstring = { version = "0.2.2", path = "../docstring" }
errmapgen = { version = "0.4.0", path = "../errmapgen" }
struct-tag = "0.2.0"
move-bytecode-verifier = "0.3.1"
move-idl-types = { version = "0.4.0", path = "../move-idl-types" }
mv-binary-format = "0.3.1"
move-core-types = { version = "0.3.1", package = "mv-core-types" }
move-model = { version = "0.3.1", package = "mv-model" }
move-package = { version = "0.3.1", package = "mv-package" }
serde = { version = "1.0", features = ["derive"] }
